[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/HurtBox.gd" type="Script" id=1]

[node name="HurtBox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]
[connection signal="area_entered" from="." to="." method="_on_HurtBox_area_entered"]
[connection signal="invincible_mode_off" from="." to="." method="_on_HurtBox_invincible_mode_off"]
[connection signal="invincible_mode_on" from="." to="." method="_on_HurtBox_invincible_mode_on"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
